Bump to JDK 19.